lib_LTLIBRARIES = libpisock.la

INCLUDES = -I$(top_srcdir)/include

libpisockdir = $(includedir)

libpisock_HEADERS = \
	pi-address.h		\
	pi-cmp.h		\
	pi-datebook.h		\
	pi-file.h		\
	pi-iambicExpense.h	\
	pi-macros.h		\
	pi-money.h		\
	pi-slp.h		\
	pi-socket.h		\
	pi-syspkt.h		\
	pi-appinfo.h		\
	pi-config-win32.h	\
	pi-dlp.h		\
	pi-header.h		\
	pi-inet.h		\
	pi-mail.h		\
	pi-padp.h		\
	pi-sockaddr-win32.h	\
	pi-source.h		\
	pi-todo.h		\
	pi-args.h		\
	pi-config.h		\
	pi-expense.h		\
	pi-hinote.h		\
	pi-inetserial.h		\
	pi-memo.h		\
	pi-serial.h		\
	pi-sockaddr.h		\
	pi-sync.h		\
	pi-version.h

libpisock_la_SOURCES =	\
	address.c	\
	appinfo.c	\
	cmp.c		\
	datebook.c	\
	dlp.c		\
	expense.c	\
	hinote.c	\
	inet.c		\
	inetserial.c	\
	mail.c		\
	memo.c		\
	money.c		\
	padp.c		\
	pi-file.c	\
	serial.c	\
	slp.c		\
	socket.c	\
	sync.c		\
	syspkt.c	\
	todo.c		\
	unixserial.c	\
	utils.c

libpisock_la_LDFLAGS = -version-info 4:0:0