man_MANS =			\
	addresses.1		\
	dlpsh.1			\
	hinotes.1		\
	ietf2datebook.1		\
	install-datebook.1	\
	install-expenses.1	\
	install-hinote.1	\
	install-memo.1		\
	install-netsync.1	\
	install-user.1		\
	pi-getram.1		\
	pi-getrom.1		\
	pilot-addresses.1	\
	pilot-link.7		\
	pilot-xfer.1		\
	read-ical.1		\
	read-notepad.1		\
	read-palmpix.1

EXTRA_DIST = 
	$(man_MANS)

	     