man_MANS =			\
	addresses.1		\
	debugsh.1		\
	dlpsh.1			\
	hinotes.1		\
	ietf2datebook.1		\
	install-datebook.1	\
	install-expenses.1	\
	install-hinote.1	\
	install-memo.1		\
	install-netsync.1	\
	install-todo.1		\
	install-todos.1		\
	install-user.1		\
	memos.1			\
	money2qif.1		\
	pi-csd.1		\
	pi-getram.1		\
	pi-getrom.1		\
	pi-getromtoken.1	\
	pilot-addresses.1	\
	pilot-archive.1		\
	pilot-clip.1		\
	pilot-dedupe.1		\
	pilot-file.1		\
	pilot-foto.1		\
	pilot-schlep.1		\
	pilot-treofoto.1	\
	pilot-wav.1		\
	pilot-xfer.1		\
	pi-nredir.1		\
	read-expenses.1		\
	read-ical.1		\
	read-notepad.1		\
	read-palmpix.1		\
	read-screenshot.1	\
	read-todos.1		\
	read-veo.1		\
	reminders.1

EXTRA_DIST = 
	$(man_MANS)

	     