man_MANS =				\
	ietf2datebook.1			\
	install-datebook.1		\
	install-hinote.1		\
	install-memo.1			\
	install-netsync.1		\
	install-todo.1			\
	install-todos.1			\
	install-user.1			\
	pilot-addresses.1		\
	pilot-clip.1			\
	pilot-csd.1			\
	pilot-debugsh.1			\
	pilot-dedupe.1			\
	pilot-dlpsh.1			\
	pilot-file.1			\
	pilot-foto.1			\
	pilot-getram.1			\
	pilot-getrom.1			\
	pilot-getromtoken.1		\
	pilot-hinotes.1			\
	pilot-install-expenses.1	\
	pilot-link.7			\
	pilot-memos.1			\
	pilot-nredir.1			\
	pilot-reminders.1		\
	pilot-schlep.1			\
	pilot-treofoto.1		\
	pilot-wav.1			\
	pilot-xfer.1			\
	read-expenses.1			\
	read-ical.1			\
	read-notepad.1			\
	read-palmpix.1			\
	read-screenshot.1		\
	read-todos.1			\
	read-veo.1

EXTRA_DIST=$(man_MANS)
